# JWKS-server

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: all.html  crates.js  fn.main.html  fn.rocket.html  help.html  index.html  search-index.js  settings.html  src-files.js
docs/auth/: fn.create_user.html  fn.find_user_by_username.html  index.html  sidebar-items.js  struct.Cred.html  struct.User.html
docs/crypto/: index.html  sidebar-items.js
docs/crypto/error/: enum.CryptoError.html  index.html  sidebar-items.js
docs/crypto/jwk/: index.html
docs/crypto/jwks/: struct.Jwks.html
docs/crypto/jwt/: index.html
docs/crypto/key_pair/: index.html
docs/jwks_server/: all.html  fn.main.html  fn.rocket.html  index.html  sidebar-items.js
docs/jwks_server/auth/: fn.create_user.html  fn.find_user_by_username.html  fn.hash_password.html  index.html  sidebar-items.js  struct.LoginDTO.html  struct.User.html
docs/jwks_server/routes/: fn.auth.html  fn.get_jwks.html  index.html
docs/routes/: fn.auth.html  fn.index.html  index.html  sidebar-items.js
migrations/: 20240228054254_users.up.sql  20240324062150_keys.up.sql  20240403214901_update_users.down.sql  20240403214901_update_users.up.sql  20240403215319_auth_logs.down.sql  20240403215319_auth_logs.up.sql
src/: main.rs
src/auth/: mod.rs
src/crypto/: error.rs  jwk.rs  jwks.rs  jwt.rs  key_pair.rs  mod.rs
src/db/: mod.rs
src/routes/: auth_response.rs  error_response.rs  index_response.rs  mod.rs
web_server/: Cargo.toml
web_server/src/: main.rs
(+39 files in other folders)
