[package]
name = "jwks_server"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
rsa = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2.0"
serde_json = "1.0"
base64 = "0.21.7"

