[package]
name = "jwks_server"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
rsa = "0.9.6"
rand = "0.8.4"
bcrypt = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.2.0"
serde_json = "1.0"
base64 = "0.21.7"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate", "uuid"] }

